--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/manifest.json
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/manifest.json
@@ -55,15 +55,15 @@
     },
     "game_targeting": {
       "type": "dedicated",
-      "game_ids": [21216, 21626, 10798, 7314, 21640, 10826, 7764, 5426, 8032]
+      "game_ids": [21216, 21626, 10798, 7314, 10624, 21640, 10826, 7764, 5426, 8032]
     },
-    "game_events": [21216, 21626, 10798, 7314, 21640, 10826, 7764, 5426, 8032],
+    "game_events": [21216, 21626, 10798, 7314, 10624, 21640, 10826, 7764, 5426, 8032],
     "launch_events": [
       {
         "event": "GameLaunch",
         "event_data": {
           "game_ids": [
-            21216, 21626, 10798, 7314, 21640, 10826, 7764, 5426, 8032
+            21216, 21626, 10798, 7314, 10624, 21640, 10826, 7764, 5426, 8032
           ]
         },
         "start_minimized": false
