--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/manifest.json
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/manifest.json
@@ -8,8 +8,8 @@
     "minimum-overwolf-version": "0.160.0",
     "description": "An example app for developers new to Overwolf",
     "dock_button_title": "Award Pool",
-    "icon": "icons/iconMouseOver.png",
-    "icon_gray": "icons/iconMouseNormal.png",
+    "icon": "icons/IconMouseOver.png",
+    "icon_gray": "icons/IconMouseNormal.png",
     "launcher_icon": "icons/launcher_icon.ico"
   },
   "permissions": ["Hotkeys", "GameInfo"],
