--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/manifest.json
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/manifest.json
@@ -32,9 +32,18 @@
           "height": 699
         },
         "min_size": {
+          
           "width": 1212,
           "height": 699
+         
+        },
+        "max_size": {
+          
+          "width": 1212,
+          "height": 699
+         
         }
+        
       },
       "in_game": {
         "file": "in_game.html",
