--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/manifest.json
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/manifest.json
@@ -32,18 +32,13 @@
           "height": 699
         },
         "min_size": {
-          
           "width": 1212,
           "height": 699
-         
         },
         "max_size": {
-          
           "width": 1212,
           "height": 699
-         
         }
-        
       },
       "in_game": {
         "file": "in_game.html",
@@ -52,9 +47,9 @@
         "focus_game_takeover_release_hotkey": "toggle_visibility",
         "transparent": true,
         "override_on_update": true,
-        "size": {
-          "width": 400,
-          "height": 450
+        "min_size": {
+          "width": 483,
+          "height": 543
         },
         "block_top_window_navigation": true,
         "popup_blocker": true,
