--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/manifest.json
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 1,
   "type": "WebApp",
   "meta": {
-    "name": "Awardpool",
-    "author": "Awardpool",
+    "name": "Award Pool",
+    "author": "Award Pool",
     "version": "1.0.1",
     "minimum-overwolf-version": "0.160.0",
     "description": "An example app for developers new to Overwolf",
