--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/manifest.json
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/manifest.json
@@ -2,9 +2,9 @@
   "manifest_version": 1,
   "type": "WebApp",
   "meta": {
-    "name": "Award Pool",
-    "author": "Award Pool",
-    "version": "1.0.1",
+    "name": "Awardpool",
+    "author": "Awardpool",
+    "version": "1.0.2",
     "minimum-overwolf-version": "0.160.0",
     "description": "An example app for developers new to Overwolf",
     "dock_button_title": "Award Pool",
@@ -59,11 +59,11 @@
     "game_targeting": {
       "type": "dedicated",
       "game_ids": [
-        21216, 21626, 10798, 7314, 10624, 21640, 10826, 7764, 5426, 8032
+        21216
       ]
     },
     "game_events": [
-      21216, 21626, 10798, 7314, 10624, 21640, 10826, 7764, 5426, 8032
+      21216
     ],
     "launch_events": [
       {
