--- a/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/manifest.json
+++ b/Award_Pool_Overwolf_App_-_source_code/Award Pool/public/manifest.json
@@ -4,7 +4,7 @@
   "meta": {
     "name": "Awardpool",
     "author": "Awardpool",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "minimum-overwolf-version": "0.160.0",
     "description": "An example app for developers new to Overwolf",
     "dock_button_title": "Award Pool",
@@ -58,13 +58,9 @@
     },
     "game_targeting": {
       "type": "dedicated",
-      "game_ids": [
-        21216
-      ]
+      "game_ids": [21216]
     },
-    "game_events": [
-      21216
-    ],
+    "game_events": [21216],
     "launch_events": [
       {
         "event": "GameLaunch",
